--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -79,11 +79,61 @@
          <property name="title">
           <string>Interlis</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout_5">
-          <item row="5" column="2" colspan="2">
-           <widget class="QPushButton" name="ili2db_options_button">
+         <layout class="QGridLayout" name="gridLayout_4">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
             <property name="text">
-             <string>Advanced Options</string>
+             <string>Interlis File</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QToolButton" name="ili_file_browse_button">
+            <property name="toolTip">
+             <string>Browse Interlis files</string>
+            </property>
+            <property name="text">
+             <string>…</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Models</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" colspan="2">
+           <widget class="CompletionLineEdit" name="ili_models_line_edit" native="true"/>
+          </item>
+          <item row="1" column="3">
+           <widget class="QToolButton" name="multiple_models_button">
+            <property name="toolTip">
+             <string>Select multiple Interlis models</string>
+            </property>
+            <property name="text">
+             <string>…</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Toppings</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1" colspan="2">
+           <widget class="CompletionLineEdit" name="ili_toppings_line_edit" native="true"/>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="crs_label">
+            <property name="toolTip">
+             <string>Coordinate Reference System</string>
+            </property>
+            <property name="text">
+             <string>CRS</string>
             </property>
            </widget>
           </item>
@@ -94,13 +144,16 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="crs_label">
-            <property name="toolTip">
-             <string>Coordinate Reference System</string>
+          <item row="4" column="0">
+           <widget class="QLabel" name="toml_file_info_label">
+            <property name="maximumSize">
+             <size>
+              <width>580</width>
+              <height>16777215</height>
+             </size>
             </property>
             <property name="text">
-             <string>CRS</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -117,25 +170,12 @@
             </property>
            </spacer>
           </item>
-          <item row="0" column="3">
-           <widget class="QToolButton" name="ili_file_browse_button">
-            <property name="toolTip">
-             <string>Browse Interlis files</string>
-            </property>
+          <item row="5" column="2" colspan="2">
+           <widget class="QPushButton" name="ili2db_options_button">
             <property name="text">
-             <string>…</string>
+             <string>Advanced Options</string>
             </property>
            </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Interlis File</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1" colspan="2">
-           <widget class="CompletionLineEdit" name="ili_models_line_edit" native="true"/>
           </item>
           <item row="0" column="1" colspan="2">
            <widget class="QLineEdit" name="ili_file_line_edit">
@@ -145,32 +185,12 @@
            </widget>
           </item>
           <item row="2" column="3">
-           <widget class="QToolButton" name="multiple_models_button">
+           <widget class="QToolButton" name="multiple_toppings_button">
             <property name="toolTip">
              <string>Select multiple Interlis models</string>
             </property>
             <property name="text">
              <string>…</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_7">
-            <property name="text">
-             <string>Models</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0" colspan="4">
-           <widget class="QLabel" name="toml_file_info_label">
-            <property name="maximumSize">
-             <size>
-              <width>580</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
             </property>
            </widget>
           </item>
