--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -120,7 +120,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>Toppings</string>
+             <string>Metaconfiguration / Topping</string>
             </property>
            </widget>
           </item>
@@ -182,7 +182,7 @@
            </widget>
           </item>
           <item row="2" column="1" colspan="3">
-           <widget class="CompletionLineEdit" name="ili_toppings_line_edit" native="true"/>
+           <widget class="CompletionLineEdit" name="ili_metaconfig_line_edit" native="true"/>
           </item>
          </layout>
         </widget>
