--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -141,19 +141,6 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
-           <widget class="QLabel" name="toml_file_info_label">
-            <property name="maximumSize">
-             <size>
-              <width>580</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
           <item row="5" column="1">
            <spacer name="horizontalSpacer">
             <property name="orientation">
@@ -183,6 +170,19 @@
           </item>
           <item row="2" column="1" colspan="3">
            <widget class="CompletionLineEdit" name="ili_metaconfig_line_edit" native="true"/>
+          </item>
+          <item row="4" column="0" colspan="4">
+           <widget class="QLabel" name="toml_file_info_label">
+            <property name="maximumSize">
+             <size>
+              <width>580</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
