--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -80,20 +80,40 @@
           <string>Interlis</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
+          <item row="5" column="0" colspan="4">
+           <widget class="QLabel" name="toml_file_info_label">
+            <property name="maximumSize">
+             <size>
+              <width>580</width>
+              <height>16777215</height>
+             </size>
+            </property>
             <property name="text">
-             <string>Interlis File</string>
+             <string/>
             </property>
            </widget>
           </item>
-          <item row="0" column="3">
-           <widget class="QToolButton" name="ili_file_browse_button">
+          <item row="4" column="1" colspan="3">
+           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true">
+            <property name="focusPolicy">
+             <enum>Qt::StrongFocus</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QLineEdit" name="ili_file_line_edit">
+            <property name="placeholderText">
+             <string>[Optional]</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="crs_label">
             <property name="toolTip">
-             <string>Browse Interlis files</string>
+             <string>Coordinate Reference System</string>
             </property>
             <property name="text">
-             <string>…</string>
+             <string>CRS</string>
             </property>
            </widget>
           </item>
@@ -104,8 +124,12 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1" colspan="2">
-           <widget class="CompletionLineEdit" name="ili_models_line_edit" native="true"/>
+          <item row="7" column="2" colspan="2">
+           <widget class="QPushButton" name="ili2db_options_button">
+            <property name="text">
+             <string>Advanced Options</string>
+            </property>
+           </widget>
           </item>
           <item row="1" column="3">
            <widget class="QToolButton" name="multiple_models_button">
@@ -117,6 +141,12 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1" colspan="3">
+           <widget class="CompletionLineEdit" name="ili_metaconfig_line_edit" native="true"/>
+          </item>
+          <item row="1" column="1" colspan="2">
+           <widget class="CompletionLineEdit" name="ili_models_line_edit" native="true"/>
+          </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
@@ -124,24 +154,14 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="crs_label">
-            <property name="toolTip">
-             <string>Coordinate Reference System</string>
-            </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
             <property name="text">
-             <string>CRS</string>
+             <string>Interlis File</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="1" colspan="3">
-           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true">
-            <property name="focusPolicy">
-             <enum>Qt::StrongFocus</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="1">
+          <item row="7" column="1">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -154,31 +174,18 @@
             </property>
            </spacer>
           </item>
-          <item row="5" column="2" colspan="2">
-           <widget class="QPushButton" name="ili2db_options_button">
+          <item row="0" column="3">
+           <widget class="QToolButton" name="ili_file_browse_button">
+            <property name="toolTip">
+             <string>Browse Interlis files</string>
+            </property>
             <property name="text">
-             <string>Advanced Options</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="ili_file_line_edit">
-            <property name="placeholderText">
-             <string>[Optional]</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1" colspan="3">
-           <widget class="CompletionLineEdit" name="ili_metaconfig_line_edit" native="true"/>
-          </item>
-          <item row="4" column="0" colspan="4">
-           <widget class="QLabel" name="toml_file_info_label">
-            <property name="maximumSize">
-             <size>
-              <width>580</width>
-              <height>16777215</height>
-             </size>
-            </property>
+          <item row="6" column="0" colspan="4">
+           <widget class="QLabel" name="metaconfig_file_info_label">
             <property name="text">
              <string/>
             </property>
