--- a/QgisModelBaker/ui/edit_dataset_name.ui
+++ b/QgisModelBaker/ui/edit_dataset_name.ui
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="basket_line_edit"/>
+    <widget class="QLineEdit" name="dataset_line_edit"/>
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="button_box">
