--- a/QgisModelBaker/ui/dataset_manager.ui
+++ b/QgisModelBaker/ui/dataset_manager.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Select Files</string>
+   <string>Dataset Manager</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="3" column="0">
