--- a/QgisModelBaker/ui/edit_dataset_name.ui
+++ b/QgisModelBaker/ui/edit_dataset_name.ui
@@ -24,24 +24,28 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="dataset_line_edit"/>
-   </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="1">
     <widget class="QDialogButtonBox" name="button_box">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel</set>
      </property>
     </widget>
    </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="ok_button">
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLineEdit" name="dataset_line_edit"/>
+   </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>button_box</tabstop>
- </tabstops>
  <resources/>
  <connections>
   <connection>
