--- a/QgisModelBaker/ui/toppingmaker_wizard/target.ui
+++ b/QgisModelBaker/ui/toppingmaker_wizard/target.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>InterlisImport</class>
- <widget class="QDialog" name="InterlisImport">
+ <class>Target</class>
+ <widget class="QDialog" name="Target">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,18 +14,73 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="1" column="0">
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
      </property>
-    </spacer>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="4" column="0" colspan="5">
+       <widget class="QTextEdit" name="info_textedit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="autoFillBackground">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="projectname_label">
+        <property name="text">
+         <string>Project Name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="main_folder_label">
+        <property name="text">
+         <string>Project Subfolder</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="4">
+       <widget class="QToolButton" name="main_folder_browse_button">
+        <property name="toolTip">
+         <string>Browse XTF files</string>
+        </property>
+        <property name="text">
+         <string>…</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="sub_folder_label">
+        <property name="text">
+         <string>Target Folder</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2" colspan="3">
+       <widget class="QLineEdit" name="projectname_line_edit"/>
+      </item>
+      <item row="2" column="3">
+       <widget class="QLineEdit" name="main_folder_line_edit"/>
+      </item>
+      <item row="3" column="2" colspan="3">
+       <widget class="QLineEdit" name="sub_folder_line_edit"/>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="description">
@@ -42,7 +97,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Makedy Bakedy Tasty Toppings...</string>
+      <string>Select the folder your ilidata.xml should be stored (Target Folder) and your Toppingfiles (exported QML files etc) should be written to (Project Subfolder).</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
