--- a/QgisModelBaker/ui/toppingmaker_wizard/referencedata.ui
+++ b/QgisModelBaker/ui/toppingmaker_wizard/referencedata.ui
@@ -7,26 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>738</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="0" column="0">
     <widget class="QLabel" name="description">
      <property name="minimumSize">
@@ -42,7 +29,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Makedy Bakedy Tasty Toppings...</string>
+      <string>Append the referenced data that should be connected to the model in the metaconfiguration file. When you choose local sources, then they are uploaded into the topping folders. Links from existing repositories are not copied.</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -52,8 +39,88 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0">
+    <widget class="QFrame" name="content_frame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="input_line_label">
+        <property name="text">
+         <string>Model or Datafile</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QToolButton" name="add_button">
+          <property name="text">
+           <string>+</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="remove_button">
+          <property name="text">
+           <string>-</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>674</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="0" column="1">
+       <widget class="CompletionLineEdit" name="input_line_edit" native="true"/>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <widget class="FileDropListView" name="source_list_view" native="true"/>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="file_browse_button">
+        <property name="toolTip">
+         <string>Browse Interlis files</string>
+        </property>
+        <property name="text">
+         <string>…</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CompletionLineEdit</class>
+   <extends></extends>
+   <header>QgisModelBaker.utils.gui_utils</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>FileDropListView</class>
+   <extends></extends>
+   <header>QgisModelBaker.utils.gui_utils</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
